# LightFeed

./: .gitignore  Makefile  README.md  development.md  electron-builder.yml  electron.vite.config.ts  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts
.github/workflows/: release.yml
resources/: example.opml
scripts/: generate-store-assets.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: category.rs  entry.rs  feed.rs  mod.rs  models.rs  settings.rs  subscription.rs
src-tauri/src/services/: cleanup.rs  feed_service.rs  mod.rs  opml.rs
src/main/: auto-updater.ts  cleanup-service.ts  database.ts  feed-service.ts  index.ts  ipc.ts  utils.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.css  index.html  types.ts
src/renderer/components/article/: article-card.tsx  article-list.tsx  article-reader.tsx
src/renderer/components/feed/: add-feed-dialog.tsx  feed-item.tsx  feed-tree.tsx
src/renderer/components/layout/: main-layout.tsx  sidebar.tsx  toolbar.tsx
src/renderer/components/settings/: about-tab.tsx  general-tab.tsx  import-export-tab.tsx  settings-dialog.tsx  storage-tab.tsx
src/renderer/components/ui/: confirm-dialog.tsx  context-menu.tsx  fuzzy-finder.tsx
src/renderer/hooks/: use-keyboard.ts
src/renderer/lib/: ipc-client.ts  utils.ts
src/renderer/stores/: app-store.ts  article-store.ts  feed-store.ts
